# codefresh-support-package

./: .gitignore  .goreleaser.yaml  CONTRIBUTIONS.md  Events.txt  LICENSE  README.md  codresh-support-package.env  deno.json  go.mod  go.sum  main.go  main.js  main.py  main.ts  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml
cf-support/: main.py
cf-support/cmd/: gitops.py  onprem.py  oss.py  pipelines.py  version.py
cf-support/logic/: codefresh.py  core.py  k8s.py
cf-support/utils/: files.py  network.py  prepare_package.py  resource_list.py  save_file.py  to_yaml.py
cf_support/: cli.py
cf_support/commands/: cmd_gitops.py  cmd_onprem.py  cmd_oss.py  cmd_pipelines.py  cmd_version.py
cf_support/core/: codefresh.py  converters.py  k8s.py
cf_support/models/: k8s_models.py
cf_support/utils/: files.py  network.py  version.py
ci/: codefresh.yaml
cmd/: gitops.go  onprem.go  oss.go  pipelines.go  root.go
commands/: cmd_gitops.py  cmd_oss.py  cmd_version.py  gitops.py  onprem.py  oss.py  pipelines.py
go/: main.go
go/cmd/: version.go
internal/codefresh/: creds.go  onprem_feature_flags.go
internal/k8s/: describe.go  get.go  k8s.go  namespaces.go  runtime_resources.go
internal/utils/: fetch_and_save.go  prepare_package.go  utils.go  write_api_calls.go
models/: codefresh.py  gitops.py  k8s.py  onprem.py  oss.py  pipeline.py
old/: .goreleaser.yaml  go.mod
old/cmd/: pipelines.go  root.go
old/src/: _version.py  main.ts  onprem.js
src/: codefresh.js  commands.ts  deps.ts  gitops.js  gitops.ts  index.js  index.ts  main.js  main.py  main.ts  onprem.js  onprem.ts  oss.js  oss.ts  pipelines.js  pipelines.ts
src/cf_support/: cli.py  main.py
src/cmds/: gitops.ts  index.ts  onprem.ts  oss.ts  pipelines.ts
src/codefresh/: codefresh.ts  gitops.ts  onprem.ts  (+2 more)
utils/: files.py
(+74 files in other folders)
