[project]
name = "cf-support"
dynamic = ["version"]
description = "Codefresh Support Package"
authors = [{ name = "Codefresh Support", email = "support@codefresh.io" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.32"
]

[project.scripts]
cf-support = "cf_support.cli:cli"

[build-system]
requires = ["setuptools>=80.9", "setuptools_scm>=8.3"]
build-backend = "setuptools.build_meta"