[project]
name = "cf-support"
dynamic = ["version"]
description = "Codefresh Support Package"
authors = [{ name = "Codefresh Support", email = "support@codefresh.io" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "kubernetes>=31.1", # Added comma here for consistency with list
    "PyYAML>=6.0",      # Added comma here for consistency with list
    "requests>=2.32"    # Removed trailing comma, as it's the last item
]

[project.scripts]
cf-support = "cf_support.cli:cli"

[build-system]
requires = ["setuptools>=80.9", "setuptools_scm[toml]>=8.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/cf_support/_version.py"